// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyStateArea.vue renders correctly 1`] = `
<div class="empty-state">
  <div class="empty-state__wrap">
    <h1></h1>
    <div class="empty-state__wrap__additional-text"></div>
    <!---->
    <div class="empty-state__wrap__img"></div>
  </div>
</div>
`;

exports[`EmptyStateArea.vue renders correctly with isButtonShown prop 1`] = `
<div class="empty-state">
  <div class="empty-state__wrap">
    <h1></h1>
    <div class="empty-state__wrap__additional-text"></div>
    <div id="addApiKeysPopupEmptyButton">
      <button-stub label="testButtonLabel" width="190px" height="50px" onpress="() => {
          /* istanbul ignore next */cov_24rw75ro5f.f[1]++;
          cov_24rw75ro5f.s[8]++;

          console.error('onPress is not reinitialized');
        }"></button-stub>
    </div>
    <div class="empty-state__wrap__img"></div>
  </div>
</div>
`;
